# mcp-localline

./: .env.example  README.md  pyproject.toml
src/mcp_localline/: __init__.py  auth.py  cli.py  client.py  server.py  storefront.py
